<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:background="@color/darkerWhite"
                  android:layout_height="match_parent">
        <Button android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Like this challenge +"
                style="@style/button"/>
        <TextView
                android:id="@+id/txtStaticChallengeName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="CHALLENGE NAME"
                style="@style/header"/>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/layoutChallenger"
                      android:orientation="horizontal"
                      android:layout_marginTop="10dp">

            <ImageView android:id="@+id/imgChallenger"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/profilepic"
                       android:layout_marginLeft="10dp"
                       android:layout_weight="1">
            </ImageView>

            <TextView
                    android:id="@+id/txtChallenger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/challenger"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:textColor="#000000"/>

            <TextView
                    android:id="@+id/txtChallengee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/challengee"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:textColor="#000000"/>


            <ImageView android:id="@+id/imgChallengee"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/profilepic"
                       android:layout_marginLeft="10dp"
                       android:layout_marginRight="10dp"
                       android:layout_weight="1">
            </ImageView>
        </LinearLayout>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:text="@string/the_challenge"
                  style="@style/header"/>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:id="@+id/viewChallengeContent"
                  android:text="@string/insert_text"
                  style="@style/normalText"/>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:text="@string/required_evidence"
                  style="@style/header"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/viewChallengeEvidence"
                  android:text="@string/insert_text"
                  style="@style/normalText"/>

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:text="@string/reward"
                  style="@style/header"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/viewChallengeReward"
                  android:text="@string/insert_text"
                  style="@style/normalText"/>

        <LinearLayout android:layout_width="fill_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content"
                      android:layout_gravity="bottom">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="All comments"
                      android:textColor="#000000"
                      style="@style/header"
                      android:textStyle="bold"/>

            <Button android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Add a comment +"
                    style="@style/button"
                    android:id="@+id/btnComment"
                    android:onClick="onCommentPressed"/>
        </LinearLayout>


    </LinearLayout>