<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#D8D8D8" android:weightSum="1">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="67dp">
            <EditText
                android:id="@+id/txtChallengeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Challenge name?"
                android:visibility="visible"
                android:layout_marginTop="10dp"
                android:textColor="#000000" android:layout_weight="1"/>
            <Spinner
                    android:layout_width="127dp"
                    android:layout_height="48dp"
                    android:id="@+id/spinner_getFriends" android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/layoutChallenger"
                      android:orientation="horizontal"
                      android:layout_marginTop="10dp">

            <ImageView android:id="@+id/imgChallenger"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/profilepic"
                       android:layout_marginLeft="10dp"
                       android:layout_weight="1">
            </ImageView>

            <TextView
                    android:id="@+id/txtChallenger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/challenger"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:textColor="#000000"/>
            />

            <TextView
                    android:id="@+id/txtChallengee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/challengee"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:textColor="#000000"/><![CDATA[
            />

            ]]>
            <ImageView android:id="@+id/imgChallengee"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/profilepic"
                       android:layout_marginLeft="10dp"
                       android:layout_marginRight="10dp"
                       android:layout_weight="1">
            </ImageView>
        </LinearLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/the_challenge"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="10dp"
                  android:textColor="#000000"
                  android:textStyle="bold"/>

        <EditText android:layout_width="fill_parent" android:layout_height="60dp"
                  android:id="@+id/txtChallengeContent"
                  android:hint="Enter a small challenge description"
                  android:layout_marginTop="5dp"
                  android:paddingLeft="10dp"
                  android:textSize="15dp"
                />

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:text="@string/required_evidence"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="10dp"
                  android:textColor="#000000"
                  android:textStyle="bold"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="Amount"
                      android:textColor="#000000"
                      android:textStyle="italic"
                      android:layout_marginLeft="10dp"
                      android:layout_marginTop="5dp"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="Type"
                      android:textColor="#000000"
                      android:textStyle="italic"
                      android:layout_marginTop="5dp"
                      android:layout_marginLeft="50dp"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <Spinner
                    android:id="@+id/spinner_evidence_amount"
                    android:layout_width="wrap_content" android:layout_height="50dp"
                    android:hint="@string/insert_text"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"
                    android:textSize="15dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:entries="@array/evidence_amounts"/>

            <Spinner
                    android:id="@+id/spinner_evidence_type"
                    android:layout_width="wrap_content" android:layout_height="50dp"
                    android:hint="@string/insert_text"
                    android:textColor="#000000"
                    android:paddingLeft="10dp"
                    android:textSize="15dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:entries="@array/evidence_types"/>
        </LinearLayout>


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/reward"
                  android:textStyle="bold"
                  android:textColor="#000000"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="5dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/txtExperiencePoints"
                  android:text="0 XP"
                  android:textColor="#000000"
                  android:textStyle="bold"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="15dp"/>

        <EditText android:layout_width="fill_parent" android:layout_height="60dp"
                  android:hint="Enter an additional reward (Optional)"
                  android:id="@+id/txtReward"
                  android:textSize="15dp"
                  android:textColor="#000000"

                  android:layout_marginTop="5dp"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/btnCreateChallenge"
                android:text="Create challenge"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

    </LinearLayout>
    <ListView android:id="@+id/left_drawer"
              android:layout_width="240dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@android:color/transparent"
              android:dividerHeight="0dp"
              android:background="#111"/>

</android.support.v4.widget.DrawerLayout>