<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="0dp"
                    android:background="#D8D8D8"
                >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Challenges"
                android:id="@+id/textView"
                android:textSize="24dp" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textColor="#000000"/>

        <TextView
                android:id="@+id/txtnewChallenge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/new_challenge"
                android:textColor="#000000"
                android:layout_below="@id/textView"
                android:layout_marginLeft="10dp"/>

        <Button
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Create"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:onClick="onCreatePressed"
                />

        <ListView android:id="@+id/lstNewChallenges"
                  android:layout_width="match_parent"
                  android:layout_height="140dp"
                  android:layout_below="@id/txtnewChallenge">
        </ListView>

        <TextView
                android:id="@+id/txtProgressChallenge"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:text="@string/challenges_in_progress"
                android:textColor="#000000"
                android:layout_below="@id/lstNewChallenges"
                android:layout_marginLeft="10dp"/>

        <ListView android:id="@+id/lstOngoingChallenges"
                  android:layout_width="match_parent"
                  android:layout_height="140dp"
                  android:layout_below="@id/txtProgressChallenge">
        </ListView>

        <TextView
                android:id="@+id/txtIssuedChallenge"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:text="@string/issued_challenges"
                android:textColor="#000000"
                android:layout_below="@id/lstOngoingChallenges"
                android:layout_marginLeft="10dp"/>

        <ListView android:id="@+id/lstIsseudChallenges"
                  android:layout_width="match_parent"
                  android:layout_height="140dp"
                  android:layout_below="@id/txtIssuedChallenge">
        </ListView>
    </RelativeLayout>
    <ListView android:id="@+id/left_drawer"
              android:layout_width="240dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@android:color/transparent"
              android:dividerHeight="0dp"
              android:background="#111"/>

</android.support.v4.widget.DrawerLayout>